--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,19 @@
 <html>
     <head>
         <title>Main page</title>
-        <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="{{ url_for('static', filename='style/index.css') }}" rel="stylesheet" />
     </head>
-    <body>
-        <h2 class="pagetitle">Welcome to dwitter!</h2>
-        <div class="logreg">
-            <a id="a-log" href="/login">Log in</a>
-            <a id="a-reg" href="/register">Register</a>
+    <body class="bg-transparent">
+        <h2 class="text-center mt-5" style="color: var(--bs-white);">Welcome to dwitter!</h2>
+        <div class="container p-5 bg-white rounded mt-5 shadow d-grid gap-4">
+            <a class="btn btn-primary rounded p-2" href="/login">Log in</a>
+            <a class="btn btn-primary rounded p-2" href="/register">Register</a>
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
