--- a/templates/register.html
+++ b/templates/register.html
@@ -2,14 +2,20 @@
 <html>
     <head>
         <title>Register new user</title>
-        <link href="{{ url_for('static', filename='register.css') }}" rel="stylesheet" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="{{ url_for('static', filename='style/register.css') }}" rel="stylesheet" />
     </head>
-    <body>
-        <div id="react_root"></div>
+    <body class="bg-transparent">
+        <div id="react_root" class="container p-5 bg-white rounded my-5 shadow"></div>
         <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-        <script src="{{ url_for('static', filename='register.js') }}" type="text/babel"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+        <script src="{{ url_for('static', filename='script/register.js') }}" type="text/babel"></script>
     </body>
 </html>
