--- a/static/style/index.css
+++ b/static/style/index.css
@@ -2,7 +2,10 @@
 
 html {
     height: 100%;
-    font-family: Ubuntu, sans-serif;
     background: rgb(59,31,220);
     background: linear-gradient(135deg, rgba(59,31,220,1) 0%, rgba(31,192,220,1) 100%);
+}
+
+body {
+    font-family: Ubuntu, sans-serif;
 }
