Реализация добавления поста и картинки в бд Добавлен выход

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -11,7 +11,7 @@
     <body class="container rounded mx-auto bg-white mt-5 p-3">
         <form method="post" enctype="multipart/form-data">
             <div class="mb-3">
-                <textarea class="form-control" rows="5" cols="50" required="required" autofocus style="resize: none;" maxlength="100"></textarea>
+                <textarea class="form-control" rows="5" cols="50" required="required" autofocus style="resize: none;" maxlength="100" name = "post_content"></textarea>
             </div>
             <div class="mb-3">
                 <input type="file" class="form-control" accept="image/png, image/jpeg" name="pub_img" />
