--- a/static/style/profile.css
+++ b/static/style/profile.css
@@ -9,3 +9,13 @@ html {
 body {
     font-family: Ubuntu, sans-serif;
 }
+
+button.liked > svg {
+    fill: red;
+    stroke: red;
+}
+
+button.notliked > svg {
+    fill: none;
+    stroke: var(--bs-secondary);
+}
