--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Confirmation page</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <title>Confirmation page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link href="{{ url_for('static', filename='style/index.css') }}" rel="stylesheet" />
-    </head>
-    <body class="bg-transparent">
-        <div class="container p-5 bg-white rounded mt-5 shadow">
-            <h2>{{ conf_msg }}</h2>
-        </div>
-    </body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      href="{{ url_for('static', filename='style/index.css') }}"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-transparent">
+    <div class="container p-5 bg-white rounded mt-5 shadow">
+      <h2>{{ conf_msg }}</h2>
+    </div>
+  </body>
 </html>
