--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>New post</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <title>New post</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link href="{{ url_for('static', filename='style/index.css') }}" rel="stylesheet" />
-    </head>
-    <body class="container rounded mx-auto bg-white mt-5 p-3">
-        <form method="post" enctype="multipart/form-data">
-            <div class="mb-3">
-                <textarea class="form-control" rows="5" cols="50" required="required" autofocus style="resize: none;" maxlength="100" name = "post_content"></textarea>
-            </div>
-            <div class="mb-3">
-                <input type="file" class="form-control" accept="image/png, image/jpeg" name="pub_img" />
-            </div>
-            <div class="mb-3 mx-auto" style="width: 120px;">
-                <input type="submit" value="Send" class="btn btn-primary" style="width: 100%;" />
-            </div>
-        </form>
-    </body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      href="{{ url_for('static', filename='style/index.css') }}"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="container rounded mx-auto bg-white mt-5 p-3">
+    <form method="post" enctype="multipart/form-data">
+      <div class="mb-3">
+        <textarea
+          class="form-control"
+          rows="5"
+          cols="50"
+          required="required"
+          autofocus
+          style="resize: none"
+          maxlength="100"
+          name="post_content"
+        ></textarea>
+      </div>
+      <div class="mb-3">
+        <input
+          type="file"
+          class="form-control"
+          accept="image/png, image/jpeg"
+          name="pub_img"
+        />
+      </div>
+      <div class="mb-3 mx-auto" style="width: 120px">
+        <input
+          type="submit"
+          value="Send"
+          class="btn btn-primary"
+          style="width: 100%"
+        />
+      </div>
+    </form>
+  </body>
 </html>
