--- a/templates/feed.html
+++ b/templates/feed.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Feed</title>
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
